[tool.poetry]
name = "quantumcomputing"
version = "0.1.0"
description = ""
authors = ["Xaver Gruber <xaver.max.gruber@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.2"
qiskit = "^2.1.1"
qiskit-aer = "^0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
